# OpenGlDemo

./: README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/whf/opengldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/glsl/part1/: one_fragment.glsl  one_vertex.glsl
app/src/main/assets/glsl/part3/: fragment.glsl  vertex.glsl
app/src/main/assets/glsl/part5/: fragment.glsl  vertex.glsl
app/src/main/assets/glsl/part6/: fragment.glsl  vertex.glsl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/part2/: CMakeLists.txt  Part2NativeRender.cpp  Part2NativeRender.h  part2_jni_call.cpp
app/src/main/cpp/part3/: CMakeLists.txt  Part3NativeRender.cpp  Part3NativeRender.h  part3_jni_call.cpp
app/src/main/cpp/part5/: CMakeLists.txt  Part5NativeRender.cpp  Part5NativeRender.h  part5_jni_call.cpp
app/src/main/cpp/part6/: CMakeLists.txt  Part6NativeRender.cpp  Part6NativeRender.h  part6_jni_call.cpp
app/src/main/cpp/two/: TwoNativeRender.cpp  TwoNativeRender.h  two_jni_call.cpp
app/src/main/cpp/utils/: asset_utils.cpp  asset_utils.h  gl_utils.cpp  gl_utils.h  log.h
app/src/main/java/com/whf/opengldemo/: Constants.java  MainActivity.java
app/src/main/java/com/whf/opengldemo/one/: OneActivity.java  OneRenderer.java
app/src/main/java/com/whf/opengldemo/part1/: Part1Activity.java  Part1Renderer.java
app/src/main/java/com/whf/opengldemo/part2/: Part2Activity.java  Part2JniCall.java
app/src/main/java/com/whf/opengldemo/part3/: Part3Activity.java  Part3JniCall.java
app/src/main/res/layout/: activity_main.xml  activity_part_1.xml  activity_part_2.xml  activity_part_3.xml  activity_part_6.xml  activity_two.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/whf/opengldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
